# teilpunkt

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTES.md  README.md  ROADMAP.md  THIRD_PARTY_LICENSES  setup.sh
cmake/: BuildOptions.cmake  Dependencies.cmake
docs/implementation/: Authentication.md  Filesystem.md  Instance.md
frontend/: dashboard.html  favicon  index.html  login.html  signup.html
frontend/css/: dashboard.css  global.css  index.css  login.css  signup.css
frontend/js/: backend.js  crypto.js  dashboard.js  filesystem.js  icons.js  login.js  qrcodegen.js  signup.js  theme-switcher.js  util.js
pyapi/teilpunkt/: events.py
src/: User.h  config.h  fwd.h  main.cpp
src/auth/: AuthToken.cpp  AuthToken.h  Authenticator.cpp  Authenticator.h  CredentialStorage.cpp  CredentialStorage.h  Credentials.h  Session.h  SessionStorage.cpp  SessionStorage.h  UserStorage.cpp  UserStorage.h
src/common/: File.h  FileHandle.h  FileID.cpp  FileID.h  User.h
src/crypto/: Ciphers.cpp  Ciphers.h  CryptoContext.cpp  CryptoContext.h  CryptoManager.cpp  CryptoManager.h  ProgramKey.cpp  ProgramKey.h  StreamCipher.cpp  StreamCipher.h  WrappedKey.h
src/datastructures/: BlockAllocator.h  BlockChain.h  BlockStorage.h  Buffer.h  Collector.h  FixedString.h  Iterator.h  RandomRegion.h  STFTable.h  SecureBox.h  SecureContainer.h  SecureEraser.h  SecureList.h  SecureTempBox.h  SecureWrapper.h  SmallVector.h  Spinlock.cpp  Spinlock.h  Timestamp.cpp  Timestamp.h
src/instance/: InstanceConfig.cpp  InstanceConfig.h  InstanceInfo.cpp  InstanceInfo.h  MainThread.cpp  MainThread.h  Task.h  TaskManager.cpp  TaskManager.h
src/logging/: Logger.cpp  Logger.h
src/memory/: Memory.h
src/monitoring/: EventData.h  EventLimiter.cpp  EventLimiter.h  EventMonitor.cpp  EventMonitor.h  Events.cpp  Events.h  IPWatcher.h  Limits.cpp  Limits.h  Watcher.h
src/monitoring/watchers/: IPWatcher.cpp  IPWatcher.h
src/server/: DTO.cpp  DTO.h  DTOMappings.h  Endpoints.cpp  Endpoints.h  StaticFileStorage.cpp  StaticFileStorage.h  WebServer.cpp  WebServer.h
src/server/endpoints/: AuthPasswordEndpoint.cpp  DirCreateEndpoint.cpp  DirDeleteEndpoint.cpp  DirLookupEndpoint.cpp  DownloadEndpoint.cpp  FileCreateEndpoint.cpp  FileDeleteEndpoint.cpp  FileDirectoryEndpoint.cpp  FileDownloadEndpoint.cpp  FileRootsEndpoint.cpp  FileUploadEndpoint.cpp  LoginEndpoint.cpp  LoginEndpoint.h  LoginPasswordEndpoint.cpp  PermissionInfoEndpoint.cpp  RegisterPasskeyEndpoint.cpp  RegisterPasswordEndpoint.cpp  SignupEndpoint.cpp  StaticEndpoint.cpp  UploadEndpoint.cpp  ZeroTrustDownloadEndpoint.cpp
src/storage/: DataStore.h  EndpointStats.cpp  EndpointStats.h  File.h  FileDescriptors.h  Storage.cpp  Storage.h  StorageDTOs.h  StorageEndpoint.cpp  StorageEndpoint.h  StorageTransaction.cpp  StorageTransaction.h  Transaction.h  VirtualDirectory.cpp  VirtualDirectory.h  VirtualFile.cpp  VirtualFile.h  VirtualFilesystem.cpp  VirtualFilesystem.h
src/storage/datastore/: DataStore.cpp  DataStore.h  FileSystem.cpp  LocalFileSystem.cpp  LocalFileSystem.h  StorageTransaction.cpp  StorageTransaction.h
src/storage/datastore/impl/: FileSystem.cpp
src/storage/datastore/stores/: LocalFileSystem.cpp  LocalFileSystem.h
src/storage/endpoints/: FileSystem.cpp  FileSystem.h
src/storage/transactions/: ReadFileTransaction.cpp  WriteFileTransaction.cpp
src/storage/vfs/: VirtualDirectory.cpp  VirtualDirectory.h  VirtualFile.cpp  VirtualFile.h  VirtualFilesystem.cpp  VirtualFilesystem.h  VirtualFilesystemCache.cpp  VirtualFilesystemCache.h
src/uac/: PermissionStorage.cpp  PermissionStorage.h  User.h  UserAccessControl.cpp  UserAccessControl.h  UserAction.h  UserPermission.h  UserPermissions.h
src/util/: FileIO.cpp  FileIO.h  Logger.cpp  Logger.h  Logging.cpp  Logging.h  Macros.h  Memory.h  ProgramKey.cpp  ProgramKey.h  Spinlock.h  Strings.cpp  Strings.h  Wrapper.cpp  Wrapper.h
static/: index.html  login.html  signup.html  style.css  upload.html
static/css/: global.css  index.css  login.css  signup.css
static/js/: dashboard.js  signup.js
tests/: CMakeLists.txt  TestAuth.cpp  TestCommons.h  TestFixedString.cpp  TestSecureList.cpp
tests/auth/: TestAuthenticator.cpp
tests/crypto/: TestCiphers.cpp
tests/datastructures/: TestCollector.cpp  TestFixedString.cpp  TestSecureBox.cpp  TestSecureList.cpp  TestSmallVector.cpp  TestSpinlock.cpp
tests/storage/: TestStorageTransaction.cpp  TestVirtualDirectory.cpp  TestVirtualFilesystem.cpp
tests/storage/datastore/: TestLocalFileSystem.cpp
tests/storage/vfs/: TestVirtualDirectory.cpp  TestVirtualFilesystem.cpp
tests/uac/: TestUserAccessControl.cpp
